java 25
* updated gradle build to java 25
* added client init log to show the current java ver